// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert[Base] should render correctly  1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body c-ms7f1h soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  Yingdu Building
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about alignment 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              colspan="2"
              style="padding-bottom: 2px;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="2"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about arrangement 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c8yl1wr soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        horizontal
      </span>
    </div>
    <div
      class="c-x0iku9 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        vertical
      </span>
    </div>
    <div
      class="c-x0iku9 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        inlineHorizontal
      </span>
    </div>
    <div
      class="c-x0iku9 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        inlineVertical
      </span>
    </div>
  </div>
  <div
    class="c8yl1wr soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        auto
      </span>
    </div>
    <div
      class="c-x0iku9 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        fixed
      </span>
    </div>
  </div>
  <div
    class="c8yl1wr soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        no border
      </span>
    </div>
    <div
      class="c-x0iku9 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        border
      </span>
    </div>
  </div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about border 1`] = `
<div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body c-vbmspi soui-descriptions-border c-bzind2 soui-descriptions-table-layout-fixed cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body c-vbmspi soui-descriptions-border c-bzind2 soui-descriptions-table-layout-fixed cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body c-vbmspi soui-descriptions-border c-bzind2 soui-descriptions-table-layout-fixed"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Mobile
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              colspan="4"
            >
              Hometown
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="4"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about colums 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about responsive 1`] = `
<div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body c-vbmspi soui-descriptions-border cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c8yl1wr soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-x0iku9 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="c-x0iku9 soui-radio-wrapper c-yin908 soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="c-x0iku9 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="cmm97dk soui-radio-indicator-wrapper"
      >
        <span
          class="cclk2uz soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="ckwqdut soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body c-ms7f1h soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  Yingdu Building,Zhichun Road,Beijing
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="c-bf4dxl soui-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="c-rw78mn soui-descriptions-item"
              >
                <div
                  class="cc28kfj soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="c-ciwxjo soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="c-mca0mj soui-descriptions-wrapper"
  >
    <div
      class="c-sn5v1x soui-descriptions-header"
    >
      <div
        class="c-c70qxy soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-rwbt9c soui-descriptions-body c-vbmspi soui-descriptions-border cuc1lia soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-c7686o soui-descriptions-table"
      >
        <tbody>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="coaz2cc soui-descriptions-row"
          >
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-cbkl3e soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-c62fd9 soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
